Wed Sep 24 17:42:30 2008  Koichi Sasada  <ko1@atdot.net>

	* ricsin/test.rcb: add 2 assersions.

Wed Sep 24 17:30:01 2008  Koichi Sasada  <ko1@atdot.net>

	* common.mk: fix ricsin.rb path.

Wed Sep 24 14:47:29 2008  Koichi Sasada  <ko1@atdot.net>

	* ricsin/ricsin.rb: moved from tool/ricsin.rb.

	* ricsin/ricsin.rb: fix to skip string and comment
	  while preprocessing C source.