@@ -1,3 +1,7 @@
+Fri Sep 26 12:49:52 2008  Koichi Sasada  <ko1@atdot.net>
+
+	* ricsin/ricsin.rb: fix $0 and fix to output ricsin_#{name}.rb.
+
 Wed Sep 24 17:42:30 2008  Koichi Sasada  <ko1@atdot.net>
 
 	* ricsin/test.rcb: add 2 assersions.
